# SPH-simulation

./: .gitignore  Boundaries.h  CMakeLists.txt  Constants.h  Particle.cpp  Particle.h  README.md  main.cpp
libs/SFML-2.5.1/include/SFML/System/: Vector2.hpp
src/: Boundaries.cpp  Boundaries.h  Constants.h  Particle.cpp  Particle.h  ParticleData.h  Timer.h  main.cpp
src/opencl/: Common.h  OpenCLHelper.cpp  OpenCLHelper.h  cl.hpp  opencl.hpp  programs.cl
